Corrections made from Matthew Pringle's review
Corrected PyMCMC.tex according to things pointed out
by Matthew. Made some changes to chris.bib, including
reference to coda.

--- a/doc/chris.bib
+++ b/doc/chris.bib
@@ -207,7 +207,7 @@
 
 @Book{ MarinRobert2007,
 	author = "Jean-Michel Marin and Christian P. Robert",
-	title = "Bayesian Core",
+	title = {{B}ayesian core},
 	publisher = "Springer--Verlag",
 	year = "2007",address="New York",
 	otherinfo = "<++>"
@@ -226,7 +226,7 @@
 
 @Article{ Matplotlib,
 	author = "John D. Hunter",
-	title = "Matplitlib: A 2D Graphics Environment",
+	title = "Matplotlib: A 2D Graphics Environment",
 	journal = "Computing in Science and Engineering",
 	year = "2007",
 	month = "",
@@ -286,12 +286,13 @@
 	year = "2003"
 }
 
+
 @Book{ RobertCassela1999,
-	title = "Monte Carlo Statistical Methods",
+	title = {Monte {C}arlo statistical methods},
 	author = "C. P. Robert and G. Casella",
 	publisher = "Springer--Verlag",
 	address = "New York",
-	year = "1999"
+	year = 1999
 }
 
 @Article{ RobertMengersen1999,
@@ -305,47 +306,46 @@
 }
 
 @Article{ RobersSahu1997,
-	title = "Updating Schemes, Correlation Structure, Blocking and Parameterisation for the Gibbs Sampler",
-	author = "S. K. Sahu and Gareth O. Roberts",
-	journal = "Journal of the Royal Statistical Society B",
-	pages = "291--317",
-	volume = "59",
-	year = "1997"
+  title =	 {Updating schemes, correlation structure, blocking
+                  and parameterisation for the {G}ibbs sampler},
+  author =	 "S. K. Sahu and Gareth O. Roberts",
+  journal =	 "Journal of the Royal Statistical Society B",
+  pages =	 "291--317",
+  volume =	 59,
+  year =	 1997
 }
 
-SciPy}: Open source scientific tools for {Python}},
-
-year = {2001--},
-
-url = "http://www.scipy.org/"
-}
 
 @Article{ StricklandMartinForbes2008,
-	title = "Parameterisation and Efficient MCMC Estimation of Non-Gaussian State Space Models",
-	author = "Chris M. Strickland and Gael M. Martin and Catherine S. Forbes",
-	journal = "Computational Statistics and Data Analysis",
-	pages = "2911--2930",
-	volume = "52",
-	year = "2008"
+  title =	 "Parameterisation and Efficient MCMC Estimation of
+                  Non-Gaussian State Space Models",
+  author =	 "Chris M. Strickland and Gael M. Martin and Catherine
+                  S. Forbes",
+  journal =	 "Computational Statistics and Data Analysis",
+  pages =	 "2911--2930",
+  volume =	 "52",
+  year =	 "2008"
 }
 
 @Book{ Zellner1971,
-	author = "Arnold Zellner",
-	title = "An introduction to {B}ayesian inference in {E}conometrics",
-	publisher = "John Wiley \& Sons",
-	year = "1971",
-	address = "New York",
-	otherinfo = ""
+  author =	 "Arnold Zellner",
+  title =	 "An introduction to {B}ayesian inference in
+                  {E}conometrics",
+  publisher =	 "John Wiley \& Sons",
+  year =	 "1971",
+  address =	 "New York",
+  otherinfo =	 ""
 }
 
 @INCOLLECTION{Zellner1986,
-	author = {Arnold Zellner},
-	title = {On assessing prior distributions and {B}ayesian regression analysis with g-prior distibutions},
-	booktitle = {{B}ayesian inference and decision techniques: Essays in honor of {B}runo de {F}inetti},
-	publisher = {Elsevier},
-	year = {1986},
-	editor = {P. K. Goel and Arnold Zelner},
-	address = {Amsterdam: North-Holland},
-	otherinfo = {}
+  author =	 {Arnold Zellner},
+  title =	 {On assessing prior distributions and {B}ayesian
+                  regression analysis with g-prior distibutions},
+  booktitle =	 {{B}ayesian inference and decision techniques: Essays
+                  in honor of {B}runo de {F}inetti},
+  publisher =	 {Elsevier},
+  year =	 1986,
+  editor =	 {P. K. Goel and Arnold Zelner},
+  address =	 {Amsterdam: North-Holland},
+  otherinfo =	 {}
 }
-
