--- a/doc/PyMCMC.tex
+++ b/doc/PyMCMC.tex
@@ -107,28 +107,28 @@ flexibility or performance. \proglang{Python} has extensive scientific
 libraries, is easily extensible, has a clean syntax and powerful
 programming constructs, making it an ideal programming language to
 build an MCMC library; see \citet{Python} for further details on the
-programming language \proglang{Python}. It contains objects for the
-Gibbs sampler, Metropolis Hastings (MH), independent MH, random walk
-MH, orientational bias Monte Carlo (OBMC) as well as the slice
-sampler. The user can simply piece together the algorithms required
-and can easily include their own modules, where necessary. Along with
-the standard algorithms, \pkg{PyMCMC} includes a module for Bayesian
-regression analysis. This module can be used for the direct analysis
-of linear models, or as a part of an MCMC scheme, where the
+programming language \proglang{Python}. \pkg{PyMCMC} contains objects
+for the Gibbs sampler, Metropolis Hastings (MH), independent MH,
+random walk MH, orientational bias Monte Carlo (OBMC) as well as the
+slice sampler. The user can simply piece together the algorithms
+required and can easily include their own modules, where necessary.
+Along with the standard algorithms, \pkg{PyMCMC} includes a module for
+Bayesian regression analysis. This module can be used for the direct
+analysis of linear models, or as a part of an MCMC scheme, where the
 conditional posterior has the form of a linear model.  It also
-contains a class that can be used along with Gibbs sampler for
+contains a class that can be used along with the Gibbs sampler for
 Bayesian variable selection.
 
 % \pkg{PyMCMC} is designed to be fully flexible, with respect to MCMC design.
-This is important in practice, as MCMC algorithms usually need to be
-tailored to the problem of interest in order to ensure good results.
-Issues such as block size and parameterisation can have a dramatic
-effect on the convergence of MCMC sampling schemes. For instance,
-\citet{LuiKongWong1994} show theoretically that jointly sampling
-parameters in a Gibbs scheme typically leads to a reduction in
-correlation in the associated Markov chain in comparison to
-individually sampling parameters. This is demonstrated in practical
-applications in \citet{CarterKohn1994} and
+The flexibility of \pkg{PyMCMC} is important in practice, as MCMC
+algorithms usually need to be tailored to the problem of interest in
+order to ensure good results.  Issues such as block size and
+parameterisation can have a dramatic effect on the convergence of MCMC
+sampling schemes. For instance, \citet{LuiKongWong1994} show
+theoretically that jointly sampling parameters in a Gibbs scheme
+typically leads to a reduction in correlation in the associated Markov
+chain in comparison to individually sampling parameters. This is
+demonstrated in practical applications in \citet{CarterKohn1994} and
 \citet{KimShephardChib1998}. Reducing the correlation in the Markov
 chain enables it to move more freely through the parameter space and
 as such enables it to escape from local modes in the posterior
@@ -159,8 +159,8 @@ and use the subroutines directly from \proglang{Python}. \pkg{F2py}
 can also be used to directly call \proglang{C} routines with the aid
 of \proglang{Fortran} signature file. This enables the use of
 \pkg{PyMCMC} and \proglang{Python} as a rapid application development
-environment, without comprimising on performance by writing only very
-small segments of their own code in a compiled language. It should be
+environment, without comprimising on performance by requiring only very
+small segments of code written in a compiled language. It should be
 mentioned that for most reasonable sized problems \pkg{PyMCMC} is
 sufficiently fast for practical MCMC analysis without the need for
 specialised modules.
@@ -274,11 +274,12 @@ arguments are required in the initialisation of the class:
 \item[\code{{*}{*}kwargs}] Optional arguments:
   
   \begin{description}
-  \item[\code{loglike}] A tuple containing a function that evaluates
-    the log-likelihood, number of parameters and the name of the
-    dataset. For example: \code{loglike = (loglike, nparam, `yvec')}.
-    If this is defined then the log-likelihood and the BIC will be
-    reported in the standard output.
+  \item[\code{loglike}] A tuple (a \proglang{Python} data structure)
+    containing a function that evaluates the log-likelihood, number of
+    parameters and the name of the dataset. For example: \code{loglike
+      = (loglike, nparam, `yvec')}.  If this is defined then the
+    log-likelihood and the BIC will be reported in the standard
+    output.
   \item[\code{transform}] A dictionary, where the keys are the names
     of the parameters and the associated values are functions that
     transform the iterates stored in the MCMC scheme. This can be
@@ -314,14 +315,14 @@ Several functions are included as a part of the class:
       \begin{itemize}
       \item If a string is passed (eg: \code{parameters = `beta'}),
         all elements of that parameter are given.
-      \item If a list, (eg: \code{parameters = {[}`alpha',
+      \item If a list (eg: \code{parameters = {[}`alpha',
           `beta'{]})}, all elements of each parameter in the list are
         given.
       \item If a dictionary (eg: \code{parameters =
           \{`alpha':\{`range':range(5)\}\})}, then there is the
-        possibility to add an additional argument 'range' that tells
-        the output to only print a subset of the parameters. The above
-        example will print information for \code{alpha{[}0{]},
+        possibility to add an additional argument \code{`range'} that
+        tells the output to only print a subset of the parameters. The
+        above example will print information for \code{alpha{[}0{]},
           alpha{[}1{]},..., alpha{[}4{]}} only.
       \end{itemize}
     \item \code{custom} - A user defined function that produces custom
@@ -351,7 +352,7 @@ Several functions are included as a part of the class:
       that will be plotted. For example, if the blockname is
       \code{`beta'} and
       $\bm{\beta}=(\beta_{0},\beta_{1}\ldots\beta_{n})$ then you may
-      specify elements as \code{elements = {[}0,2,5{]}.}.
+      specify elements as \code{elements = {[}0,2,5{]}}.
     \item \code{plottypes}: A list giving the type of plot for each
       parameter. By default the plots are \code{`density'},
       \code{`acf'} and \code{`trace'}. A single string is also
@@ -379,11 +380,11 @@ Several functions are included as a part of the class:
     \end{description}
   \end{description}
 
-  \item \code{CODAoutput({*}{*}kwargs)} - Output the results in a
-    format suitable for reading in with the statistical package
-    Convergence Diagnostic and Output Analysis (CODA). By default,
-    there will be two files created, \code{coda.txt} and
-    \code{coda.ind}.
+\item \code{CODAoutput({*}{*}kwargs)} - Output the results in a format
+  suitable for reading in with the statistical package Convergence
+  Diagnostic and Output Analysis (CODA)
+  \citep{Rnews:Plummer+Best+Cowles+Vines:2006}. By default, there will
+  be two files created, \code{coda.txt} and \code{coda.ind}.
 
     \begin{description}
     \item \code{{*}{*}kwargs} - An optional dictionary controlling the
@@ -393,13 +394,14 @@ Several functions are included as a part of the class:
       \item \code{filename}: A string to provide an alternative
         filename for the output.  If the file has an extension this
         will form the basis for the data file and the index file will
-        be named by replacing the extension with ind. If no extension
-        is in the filename then two files will be created and named by
-        adding the extensions .txt and .ind to the given filename.
+        be named by replacing the extension with \code{ind}. If no
+        extension is in the filename then two files will be created
+        and named by adding the extensions \code{.txt} and \code{.ind}
+        to the given filename.
       \item \code{parameters}: A string, a list or a dictionary that
         specify the items written to file. It can be a string such as
         \code{`alpha'} or it can be a list (eg
-        \code{{[}`alpha',`beta'{]}}) or it can be a dictionary (eg
+        \code{{[}`alpha',`beta'{]}}) or it can be a dictionary (eg \newline
         \code{\{`alpha':\{`range':{[}0,1,5{]}\}\}}.  If you supply a
         dictionary the key is the parameter name. It is also
         permissible to have a range key with a range of elements. If
@@ -421,7 +423,7 @@ samplers is the MH algorithm (Algorithm \ref{alg:MH}); see for example
 \citet{RobertCassela1999}. This algorithm is usually required when we
 cannot easily sample directly from $p(\bm{\theta}|\bm{y}),$ however,
 we have a candidate density
-$q(\bm{\theta}|\bm{y})=q(\bm{\theta}|\bm{y},\bm{\theta}^{j-1})$, which
+$q(\bm{\theta}|\bm{y},\bm{\theta}^{j-1})$, which
 in practice is close to $p(\bm{\theta}|\bm{y}$), and is more readily
 able to be sampled. The MH algorithm at the $j^{th}$ iteration for
 $j=1,2,\dots,M$ is given by the following steps:
@@ -604,7 +606,7 @@ as follows:
 \begin{algorithm}[H]
 \begin{enumerate}
 \item Draw $L$ candidates $\bm{\theta}_{l}^{\ast},$ $l=1,2,\ldots,L$,
-  independently from the densities
+  independently from the density
   $q\left(\bm{\theta}|\bm{y},\bm{\theta}^{j-1}\right)$, where
   $q\left(\bm{\theta}|\bm{y},\bm{\theta}^{j-1}\right)$ is a symmetric
   function.
@@ -634,7 +636,7 @@ generalisation of the random walk MH algorithm. The class for the OBMC
 algorithm is named \code{OBMC}. To initialise the class the user must
 specify:
 \begin{description}
-\item \code{post} - A user defined function for the log of full
+\item \code{post} - A user defined function for the log of the full
   conditional posterior distribution for the parameters of interest.
 \item \code{ntry} - Number of candidates, $L$.
 \item \code{csig} - A scale parameter for the OBMC algorithm.
@@ -765,7 +767,7 @@ $A$.\end{enumerate}
 
 The value of $\theta^{j}$ is accepted if it is drawn from a range
 $(LB,UB)\in A$. If it is outside the allowable range due to the
-interval $(LB,UB)$ being larger in range then the set $A$ we then
+interval $(LB,UB)$ being larger in range than the set $A$ we then
 invoke a shrinkage technique to resample $\theta^{j}$ and improve the
 sampling efficiency of future draws, until an acceptable $\theta^{j}$
 is drawn.  The shrinkage algorithm is implemented as follows,
@@ -806,7 +808,7 @@ to step 1,
     \item \code{`all'} (default), stores every iterate for the
       parameter of interest. This is required for certain
       calculations.
-    \item `none', does not store any of the iterates from the
+    \item \code{`none'}, does not store any of the iterates from the
       parameter of interest.
     \end{description}
   \item \code{fixed\_parameter} - Is used if the user wants to fix the
@@ -828,7 +830,7 @@ linear or partly linear models. In particular the classes
 \code{BayesRegression}, \code{CondRegBetaSampler},
 \code{CondScaleSampler} and \code{StochasticSearch} are useful for
 this purpose. These classes are described in this section.  For the
-standard linear regression model (see \cite{Zellner1971}), assume the
+standard linear regression model (see \citet{Zellner1971}), assume the
 $\left(n\times1\right)$ observational vector, $\bm{y},$ is generated
 according to\begin{equation}
   \bm{y}=\bm{X}\bm{\beta}+\bm{\varepsilon};\,\,\,\bm{\varepsilon}\sim
@@ -892,7 +894,7 @@ prior, \code{BayesRegression} produces estimates for\emph{
 $\left(\sigma,\bm{\beta}^{T}\right)$ . The Normal-inverted gamma prior
 is specified such that
 \begin{equation}
-  \bm{\beta}|\sigma^{-2}\sim`
+  \bm{\beta}|\sigma^{-2}\sim
   N(\bm{\underline{\beta}},\underline{\bm{V}}^{-1}),\,\,\,\sigma^{-2}\sim
   IG\left(\frac{\underline{\nu}}{2},\frac{\underline{S}}{2}\right),\label{eq:Normal
     Inverted Gamma}
@@ -915,7 +917,7 @@ that are specified by the user. To initialise the class
 \item \code{{*}{*}kwargs} - Optional arguments:
 
   \begin{description}
-  \item \code{prior} - A list contain the name of the prior and the
+  \item \code{prior} - A list containing the name of the prior and the
     corresponding hyperparameters. Examples: \code{prior =
       {[}`normal\_gamma', betaubar, Vubar, nuubar, Subar{]}},
     \code{prior = {[}`normal\_inverted\_gamma',betaubar, Vubar,
@@ -954,11 +956,11 @@ interest to the user. In particular:
   regression analysis.  The residuals are calculated with $\bm{\beta}$
   evaluated at the marginal posterior mean.
 \item \code{output} - Produces standard output for the regression
-  analysis.  This includes the means, standard deviations and HPD
-  intervals for the marginal posterior densities for each element of
-  $\bm{\beta}$ and for the scale parameter ($\sigma$ or $\kappa)$. The
-  output also reports the log-likelihood and the Bayesian information
-  criterion (BIC).
+  analysis.  This includes the means, standard deviations and highest
+  posterior density (HPD) intervals for the marginal posterior
+  densities for each element of $\bm{\beta}$ and for the scale
+  parameter ($\sigma$ or $\kappa)$. The output also reports the
+  log-likelihood and the BIC.
 \end{description}
 In MCMC sampling schemes it is common that for a subset of the unknown
 parameters of interest the full conditional posterior distribution
@@ -1075,7 +1077,7 @@ To use the class \code{StochasticSearch }the user must specify their
 \emph{a priori} beliefs that the unknown parameters of interest,
 $(\sigma,\bm{\beta}^{T})^{T},$ are specified according Zellner's
 g-prior, which is described in (\ref{eq:g-prior}).
-\emph{StochasticSearch }is designed to be used in conjunction with the
+\code{StochasticSearch }is designed to be used in conjunction with the
 MCMC sampling class. To initialise \code{StochasticSearch} the user
 must specify:
 \begin{description}
@@ -1508,24 +1510,27 @@ Log likelihood =  3864.453
 
 \end{verbatim}
 
-It can be seen from the output that estimation is very fast (7.3
+It can be seen from the output that estimation is very fast (7.5
 seconds), and that both $\beta_{0}$ and $\beta_{1}$ are positive
 values, with $\hat{\beta}_{0}$ = 1.14 {[}1.05, 1.23{]} and
-$\hat{\beta}_{1}$ = 0.157 {[}0.149, 0.165{]}. The marginal posterior
+$\hat{\beta}_{1}$ = 0.157 {[}0.148, 0.165{]}. The marginal posterior
 densities of these estimates (Figure 2) confirm that both estimates
 are far from zero.
 
-The ACF plots (Figure 2) and low inefficiency factors (see
-\citet{ChibGreenberg1996} for details on inefficiency factors) of 12.6
-($\hat{\beta}_{0}$) and 11.4 ($\hat{\beta}_{1}$) show that
-autocorrelation in the sample is relatively low for an MCMC sampler. %
+The ACF plots (Figure \ref{fig:plot_output_eg2}) and low inefficiency
+factors (see \citet{ChibGreenberg1996} for details on inefficiency
+factors) of 13.5 ($\hat{\beta}_{0}$) and 12.2 ($\hat{\beta}_{1}$) show
+that autocorrelation in the sample is relatively low for an MCMC
+sampler. %
 \begin{figure}[t!]
   \begin{center}
     \includegraphics[width=16cm]{ex_loglinear.pdf}
   \end{center}
-\caption{Plots of the marginal posterior density, autocorrelation and trace
-plots for the MCMC estimation of the log linear model in example 2.}
-
+  \caption{Plots of the marginal posterior density, autocorrelation
+    and trace plots for the MCMC estimation of the log linear model in
+    Example 2. Note summaries are calculated after removing the burn
+    in.}
+\label{fig:plot_output_eg2}
 \end{figure}
 
 \subsection{Example 3: First order autoregressive regression}
@@ -1550,7 +1555,7 @@ regressors, $\bm{\beta}$ is a $\left(k\times1\right)$ vector of
 regression coefficients, $\rho$ is a damping parameter and $\nu_{t}$
 is an independent identically normally distributed random variable
 with a mean of 0 and a variance of $\sigma^{2}.$ Under the assumption
-the the process driving the errors are stationary, that is $|\rho|<1,$
+that the process driving the errors is stationary, that is $|\rho|<1,$
 and assuming that the process has been running since time immemorial
 then (\ref{eq:observation ar}) and (\ref{eq:error ar}) can be
 expressed as
@@ -1581,7 +1586,7 @@ where\[
 and $\tilde{\bm{\varepsilon}}=\bm{L}^{T}\bm{\varepsilon}.$ Note that
 $\bm{\varepsilon}\sim N(0,\kappa^{-1}\bm{I})$.
 
-The joint posterior distribution for full set of unknown parameters
+The joint posterior distribution for the full set of unknown parameters
 is
 \begin{equation} p(\bm{\beta},\kappa,\rho|\bm{y})\propto
   p(\bm{y}|\bm{\beta},\kappa,\rho)\times p(\bm{\beta},\kappa)\times
@@ -1806,8 +1811,9 @@ it is clear that the algorithm is very efficient.
 \begin{center}
   \includegraphics{rho.pdf}
 \end{center}
-\caption{Marginal posterior density, autocorrelation function and trace plot
-based on the MCMC analysis for example 3.}
+\caption{Marginal posterior density, autocorrelation function and
+  trace plot based on the MCMC analysis for Example 3. Note summaries
+  are calculated after removing the burn in.}
 
 \end{figure}
 
@@ -1924,9 +1930,9 @@ def logl(store):
 \end{lstlisting}
 
 
-The total time taken for weave version is 4.33 seconds. The reason for
+The total time taken for \pkg{Weave} version is 4.33 seconds. The reason for
 the speed increase over the original version that uses \pkg{Numpy}
-functions is the weave version avoids the construction of temporary
+functions is the \pkg{Weave} version avoids the construction of temporary
 matrices that are typically a by product of overloaded operators.
 
 Another alternative, which is our preferred approach, is to use the
@@ -1934,8 +1940,8 @@ Another alternative, which is our preferred approach, is to use the
 details. \pkg{F2py} allows for the seamless integration of
 \proglang{Fortran} and \proglang{Python} code. Following on using the
 same trivial example we use the following \proglang{Fortran77} code.
-This example requires that the user the have basic linear algebra
-subprograms (\pkg{BLAS}) and and preferable also the automatically
+This example requires that the user have basic linear algebra
+subprograms (\pkg{BLAS}) and preferable also the automatically
 tuned
 linear algebra software (\pkg{ATLAS}).\\
  
@@ -2006,20 +2012,20 @@ data['xmatf']=asfortranarray(xmat)
 
 
 The array \code{data{[}`xb'{]}} is a work array used for the
-calculation of $\bm{X}\bm{\beta}.$ It is stored in in the
+calculation of $\bm{X}\bm{\beta}.$ It is stored in the
 \proglang{Python} dictionary \code{data}, so it is only created once
 rather that each time the function \code{logl} is called. The second
 array \code{data{[}`xmatf'{]}} stores $\bm{X}$ in column major order,
 which is what is used in \proglang{Fortran}, rather than the
 \proglang{Python} default, which is row major order the default for
 the \proglang{C} programming language. If \code{store{[}`xmat'{]}} is
-passed to the function \code{loglinear.logl} then f2py will
+passed to the function \code{loglinear.logl} then \pkg{F2py} will
 automatically produce a copy and convert it to column major order each
 time the function \code{logl} is called.
 
 The total time for the MCMC sampler when using f2py is 4.03 seconds.
-This is slightly faster that the version that uses Weave, where most
-likely the small gain can be attributed to the use of ATLAS.
+This is slightly faster that the version that uses \pkg{Weave}, where most
+likely the small gain can be attributed to the use of \pkg{ATLAS}.
 
 The user has many other choices available to them for writing
 specialised extension modules. For example, if it is the preference of
@@ -2067,8 +2073,8 @@ which are freely available:
   provides a native Windows \proglang{Fortran} compiler.
 \end{itemize}
 Once these additional utilities are installed, it should be possible
-to compile code in different languages. To test that Weave works as
-expected, make sure that the \pkg{mingw} bin directory is in your
+to compile code in different languages. To test that \pkg{Weave} works
+as expected, make sure that the \pkg{mingw} bin directory is in your
 path, and try the following code:
 
 
@@ -2100,8 +2106,8 @@ provided works on your system. The examples presented above
 additionally require \pkg{BLAS} or \pkg{ATLAS} to be available. This
 can be built under windows (see instructions at
 http://www.scipy.org/Installing\_SciPy/Windows, for example). To check
-that \pkg{F2py} and ATLAS are installed correctly, save the following
-code as, for example, blas\_eg.f90:
+that \pkg{F2py} and \pkg{ATLAS} are installed correctly, save the
+following code as, for example, \code{blas\_eg.f90}:
 
 
 \begin{lstlisting}[basicstyle={\scriptsize}]
@@ -2115,8 +2121,8 @@ end subroutine dgemveg
 \end{lstlisting}
 
 
-Set the location of your ATLAS libraries appropriately, and ensure
-that gfortran is in your path and compile. The following provides a
+Set the location of your \pkg{ATLAS} libraries appropriately, and ensure
+that \pkg{gfortran} is in your path and compile. The following provides a
 template:
 
 
@@ -2129,7 +2135,7 @@ python /c/Python26/Scripts/f2py.py -c -m foo \
 \end{lstlisting}
 
 
-This should produce a \proglang{Python} dll (foo.pyd), which can be imported
+This should produce a \proglang{Python} dll (\code{foo.pyd}), which can be imported
 into \proglang{Python}:
 
 
@@ -2148,7 +2154,7 @@ There are many functions from the \proglang{R} statistical language
 \proglang{Python} library can be used to integrate \proglang{R}
 functions into \pkg{PyMCMC} programs. These can be accessed in
 \pkg{PyMCMC} through the \pkg{RPy2} \proglang{Python} library. As an
-example, consider the Log linear model described in Section
+example, consider the log linear model described in Section
 \ref{sub:Example-2:-Log-linear}. The random walk MH requires the
 specification of a candidate density function Equation (\ref{random
   walk candidate}) and an initial value. The R functions \texttt{glm
@@ -2196,7 +2202,7 @@ It may also be useful to take advantage of the many MCMC analysis
 functions in \proglang{R} and associated packages. To facilitate this,
 \pkg{PyMCMC} includes a CODA
 \citep{Rnews:Plummer+Best+Cowles+Vines:2006} output format which can
-easily be read into\proglang{R}for further analysis. A sample
+easily be read into \proglang{R} for further analysis. A sample
 \proglang{R} session after \pkg{PyMCMC} might look like:
 
 
@@ -2217,7 +2223,7 @@ acfplot(aa,lag.max=500)
 \section{Conclusions}
 \label{sec:Conclusions}
 
-In this paper, we have described the \proglang{Python} software
+In this paper, we describe the \proglang{Python} software
 package \pkg{PyMCMC}.  \pkg{PyMCMC} takes advantage of the flexibility
 and extensibility of \proglang{Python} to provide the user with a code
 efficient way of constructing MCMC samplers. The \pkg{PyMCMC} package
