--- a/doc/chris.bib
+++ b/doc/chris.bib
@@ -185,7 +185,7 @@
 }
 
 @Article{ LuiLiangWong2000,
-	author = "F. Liang {Jun S. Lui} and W. H. Wong",
+	author = "F. Liang and Jun S. Lui and W. H. Wong",
 	title = "The use of multiple-try method and local optimization in Metropolis sampling",
 	journal = "Journal of the American Statistical Association",
 	year = "2000",
